Switched to apenwarr/redo; README.md: New file
Signed-off-by: Страхиња Радић <contact@strahinja.org>

--- a/blog/template.slw.in
+++ b/blog/template.slw.in
@@ -2,7 +2,7 @@
 stylesheet: /css/index.css
 stylesheet: /css/fonts.css
 title-heading-level: 1
-permalink-url: /%BASEDIR%%FILENAME%
+permalink-url: /%BASEDIR%/%FILENAME%
 ---
 {=permalink}
 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
