Added several texts, redesigned the layout for the lists of texts
Signed-off-by: Страхиња Радић <contact@strahinja.org>

--- a/.htaccess
+++ b/.htaccess
@@ -7,8 +7,8 @@
     RewriteRule ^/?profil/?$ /profil/index.html [L]
     RewriteRule ^/?portfolio/?$ /portfolio/index.html [L]
     RewriteRule ^/?tekstovi/?$ /tekstovi/index.html [L]
-    RewriteRule ^/?tekstovi/softver/?$ /tekstovi/softver/index.html [L]
-    RewriteRule ^/?tekstovi/softver/ojl/?$ /tekstovi/softver/ojl.html [L]
+    RewriteRule ^/?tekstovi/([a-z_-]+)/?$ /tekstovi/$1/index.html [L]
+    RewriteRule ^/?tekstovi/([a-z_-]+)/([a-z_-]+)/?$ /tekstovi/$1/$2.html [L]
 
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^/?blog/([^/]+)/([^/]+)/?$ /blog/$1/$2.html [L]
