Meta variable adjustments; img/preview-*.webp: New files
Signed-off-by: Страхиња Радић <contact@strahinja.org>

--- a/blog/template.slw.in
+++ b/blog/template.slw.in
@@ -1,7 +1,7 @@
 ---
 lang: sr
 site-name: %TITLE% //strahinja.org
-site-desc: %SITEDESC%
+site-desc: %DESCRIPTION%
 stylesheet: /css/index.css
 stylesheet: /css/fonts.css
 title-heading-level: 1
@@ -11,7 +11,7 @@ add-article-header: 1
 image: /img/preview-blog-strahinja-org.webp
 canonical: https://strahinja.org/blog/%FILENAME%
 article-title: %TITLE% //strahinja.org
-meta: article-meta.csv
+meta: ../article-meta.csv
 ---
 {=permalink}
 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
