--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,22 @@
     RewriteEngine On
     RewriteBase /
 
+    Redirect 404 /.htaccess
+    Redirect 410 /categories
+    Redirect 410 /favorites
+    Redirect 410 /logout
+    Redirect 410 /omeni
+    Redirect 410 /pomocy.php
+    Redirect 410 /razno
+    Redirect 410 /sitemap.xml
+    RedirectMatch 410 /tekstovi/razno.*
+    Redirect 410 /doku/cv-strahinja-radic.pdf
+    
+    #RewriteCond %{SERVER_PORT} 80
+    #RewriteRule ^(.*)$ https://strahinja.org/$1 [R,L]
+
+    Redirect /tekstovi/softver/gnu /tekstovi/softver
+    
     RewriteRule ^/?profil/?$ /profil/index.html [L]
     RewriteRule ^/?portfolio/?$ /portfolio/index.html [L]
     RewriteRule ^/?tekstovi/?$ /tekstovi/index.html [L]
