Corrected canonical link for blog entries
Signed-off-by: Страхиња Радић <contact@strahinja.org>

--- a/blog/template.slw.in
+++ b/blog/template.slw.in
@@ -9,7 +9,7 @@ permalink-url: /%BASEDIR%/%FILENAME%
 add-footnote-div: 1
 add-article-header: 1
 image: /img/preview-blog-strahinja-org.webp
-canonical: https://strahinja.org/blog/%FILENAME%
+canonical: https://strahinja.org/%BASEDIR%/%FILENAME%
 article-title: %TITLE% //strahinja.org
 meta: ../article-meta.csv
 ---
