--- a/tekstovi/template.slw.in
+++ b/tekstovi/template.slw.in
@@ -4,7 +4,7 @@ site-name: %SITENAME% //strahinja.org
 site-desc: %SITEDESC%
 stylesheet: /css/index.css
 stylesheet: /css/fonts.css
-stylesheet: https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css
+stylesheet: /css/katex.min.css
 title-heading-level: 1
 permalink-url: /%BASEDIR%/%FILENAME%
 add-footnote-div: 1
