--- a/tekstovi/template.slw.in
+++ b/tekstovi/template.slw.in
@@ -9,7 +9,7 @@ title-heading-level: 1
 permalink-url: /%BASEDIR%/%FILENAME%
 add-footnote-div: 1
 add-article-header: 1
-image: /img/preview-home-strahinja-org.webp
+image: https://strahinja.org/img/preview-home-strahinja-org.webp
 canonical: https://strahinja.org/tekstovi/%FILENAME%
 article-title: %TITLE% //strahinja.org
 meta: ../article-meta.csv
